--- a/style/studio.css
+++ b/style/studio.css
@@ -2,7 +2,7 @@ html {
     box-sizing: border-box;
     height: 100%;
 
-    font-family: "Novecento Sans Wide", Arial, Helvetica, sans-serif;
+    font-family: "Novecento Sans Wide", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: calc(1em + 1vw);
 
     text-transform: lowercase;
