--- a/style/studio.css
+++ b/style/studio.css
@@ -145,3 +145,17 @@ a:hover {
         background-image: url('../images/background-480w@2x.jpg');
     }
 }
+
+#studio {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 1000;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
