--- a/style/fonts.css
+++ b/style/fonts.css
@@ -21,8 +21,8 @@
     font-family: "Novecento Sans Wide";
     font-weight: 200;
     font-style: normal;
-    src: url("../fonts/NovecentoSansWide-Light.woff") format("woff"),
-         url("../fonts/NovecentoSansWide-Light.woff2") format("woff2"),
+    src: url("../fonts/NovecentoSansWide-Light.woff2") format("woff2"),
+         url("../fonts/NovecentoSansWide-Light.woff") format("woff"),
          url("../fonts/NovecentoSansWide-Light.svg") format("svg");
 }
 
@@ -30,8 +30,8 @@
     font-family: "Novecento Sans Wide";
     font-weight: 300;
     font-style: normal;
-    src: url("../fonts/NovecentoSansWide-Book.woff") format("woff"),
-         url("../fonts/NovecentoSansWide-Book.woff2") format("woff2"),
+    src: url("../fonts/NovecentoSansWide-Book.woff2") format("woff2"),
+         url("../fonts/NovecentoSansWide-Book.woff") format("woff"),
          url("../fonts/NovecentoSansWide-Book.svg") format("svg");
 }
 
@@ -39,8 +39,8 @@
     font-family: "Novecento Sans Wide";
     font-weight: 400;
     font-style: normal;
-    src: url("../fonts/NovecentoSansWide-Normal.woff") format("woff"),
-         url("../fonts/NovecentoSansWide-Normal.woff2") format("woff2"),
+    src: url("../fonts/NovecentoSansWide-Normal.woff2") format("woff2"),
+         url("../fonts/NovecentoSansWide-Normal.woff") format("woff"),
          url("../fonts/NovecentoSansWide-Normal.svg") format("svg");
 }
 
@@ -48,8 +48,8 @@
     font-family: "Novecento Sans Wide";
     font-weight: 500;
     font-style: normal;
-    src: url("../fonts/NovecentoSansWide-Medium.woff") format("woff"),
-         url("../fonts/NovecentoSansWide-Medium.woff2") format("woff2"),
+    src: url("../fonts/NovecentoSansWide-Medium.woff2") format("woff2"),
+         url("../fonts/NovecentoSansWide-Medium.woff") format("woff"),
          url("../fonts/NovecentoSansWide-Medium.svg") format("svg");
 }
 
@@ -57,8 +57,8 @@
     font-family: "Novecento Sans Wide";
     font-weight: 600;
     font-style: normal;
-    src: url("../fonts/NovecentoSansWide-DemiBold.woff") format("woff"),
-         url("../fonts/NovecentoSansWide-DemiBold.woff2") format("woff2"),
+    src: url("../fonts/NovecentoSansWide-DemiBold.woff2") format("woff2"),
+         url("../fonts/NovecentoSansWide-DemiBold.woff") format("woff"),
          url("../fonts/NovecentoSansWide-DemiBold.svg") format("svg");
 }
 
@@ -66,7 +66,7 @@
     font-family: "Novecento Sans Wide";
     font-weight: 700;
     font-style: normal;
-    src: url("../fonts/NovecentoSansWide-Bold.woff") format("woff"),
-         url("../fonts/NovecentoSansWide-Bold.woff2") format("woff2"),
+    src: url("../fonts/NovecentoSansWide-Bold.woff2") format("woff2"),
+         url("../fonts/NovecentoSansWide-Bold.woff") format("woff"),
          url("../fonts/NovecentoSansWide-Bold.svg") format("svg");
 }
